# remoteTemperatureMeasurement

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  Makefile  README.md  TCPTempSens Debug.launch  TCPTempSens.ioc
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
Core/Src/: adc.c  gpio.c  main.c  rtc.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usart.c
Module/: GlobalData.h  NewMain.cpp  NewMain.h
Module/CommunicationWithPC/: ComWithPC.cpp  ComWithPC.h  WifiESP8266ATCom.cpp  WifiESP8266ATCom.h
Module/CommunicationWithPC/ESP8266StateMachine/: ESP8266CheckCIPSTATUS.cpp  ESP8266CheckCIPSTATUS.h  ESP8266CipSend.cpp  ESP8266CipSend.h  ESP8266CommunicationTest.cpp  ESP8266CommunicationTest.h  ESP8266ConnectToRouter.cpp  ESP8266ConnectToRouter.h  ESP8266ConnectToTCPServer.cpp  ESP8266ConnectToTCPServer.h  ESP8266Definitions.h  ESP8266Initialized.cpp  ESP8266Initialized.h  ESP8266SetMode.cpp  ESP8266SetMode.h  ESP8266SetPassthroughMode.cpp  ESP8266SetPassthroughMode.h  ESP8266State.cpp  ESP8266State.h
Module/CommunicationWithPC/Freames/: FramesCreator.cpp  FramesCreator.h  FramesHTTPRequestsCreator.cpp  FramesHTTPRequestsCreator.h
Module/Controller/: CommController.cpp  CommController.h
Module/Inc/: WiFi.h  ds18b20.h
Module/Models/: CircularBuffer.cpp  CircularBuffer.h
Module/OldModule/Inc/: CircularBuffer.h  OneWire.h  WiFi.h
Module/OldModule/Src/: WiFi.c
Module/Src/: CircularBuffer.c  OneWire.c  WiFi.c  ds18b20.c
Module/TemperatureSensors/: DS18B20.cpp  DS18B20.h  TempSensor.cpp  TempSensor.h
Test/: main.cpp
(+16 files in other folders)
